# c_clangd_started

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: ch347.c  ch347.h  config.h  main.c  st7789.c  st7789.h
